fix: page height when no posts and profile abou info overflow fix

--- a/blocks/page.css
+++ b/blocks/page.css
@@ -5,5 +5,6 @@
   display: flex;
   flex-direction: column;
   margin: auto;
+  min-height: 100vh;
   min-width: 320px;
 }
