--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -60,6 +60,9 @@
   font-weight: 400;
   font-size: 1.125em;
   line-height: 1.21;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__add {
